--- a/Professional-Five/index.html
+++ b/Professional-Five/index.html
@@ -20,7 +20,7 @@
 <body>
     <section id="home" style="background-image: url('assets/Images/main-banner.png');">
         <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid nav-padding">
+            <div class="container">
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/Images/logo.png" class="img-fluid media-logo-width" />
                 </a>
@@ -78,9 +78,8 @@
                     <img src="assets/Images/below-lines.png" />
                 </div>
             </div>
-        </div>
-        <div class="pattern-padding">
-            <div class="row mt-86">
+
+            <div class="row justify-content-center mt-86">
                 <div class="col-lg-3 col-md-6 text-center">
                     <i class="flaticon-light-bulb"></i>
                     <h2 class="service-heading mt-20">Idea</h2>
@@ -111,6 +110,7 @@
                 </div>
             </div>
         </div>
+
     </section>
     <section id="history" class="mt-123">
         <div class="container">
@@ -317,7 +317,7 @@
             </div>
         </div>
     </section>
-    <section id="team" class="mt-100">
+    <section id="team">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 offset-md-2 text-center">
@@ -414,72 +414,75 @@
         </div>
     </section>
     <section id="contact">
-        <div class="row">
-            <div class="col-lg-3 col-md-6">
-                <div>
-                    <img src="assets/Images/footer-logo.png" />
-                </div>
-                <p class="logo-desc mt-40">
-                    usmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.
-                </p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h2 class="subscribe-text">Subscribe</h2>
-                <form action="/" method="post" class="mt-40">
-                    <div class="form-group position-relative">
-                        <input type="email" class="email-field" placeholder="Enter Email Here" name="name" value="" required="" />
-                        <button type="submit" class="btn-style">
-                            <i class="flaticon-arrow-pointing-to-right"></i>
-                        </button>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div>
+                        <img src="assets/Images/footer-logo.png" />
                     </div>
-                </form>
-            </div>
-            <div class="col-lg-2 col-md-6 offset-lg-1 media-footer-mt">
-                <h2 class="subscribe-text">Explore</h2>
-                <div class="mt-30">
-                    <ul class="footer-nav-setting">
-                        <li class="mt-2">
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="mt-2">
-                            <a href="#">Service</a>
-                        </li>
-                        <li class="mt-2">
-                            <a href="#">About</a>
-                        </li>
-                        <li class="mt-2">
-                            <a href="#">Work</a>
-                        </li>
-                        <li class="mt-2">
-                            <a href="#">Team</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 media-footer-mt">
-                <div>
-                    <a href="#" class="link-style">
-                        <i class="flaticon-facebook-logo  ml-2"></i>
-                    </a>
-                    <a href="#" class="link-style ">
-                        <i class="flaticon-twitter-logo-silhouette ml-2"></i>
-                    </a>
-                    <a href="#" class="link-style ">
-                        <i class="flaticon-pinterest-logo ml-2"></i>
-                    </a>
-                </div>
-                <div class="mt-45">
-                    <p class="footer-pera-text">
-                        Created by <span class="biz-color">Bizinabox </span>,<br />
-                        exclusive for Professionals.
+                    <p class="logo-desc mt-40">
+                        usmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat.
                     </p>
-                    <p class="footer-font mt-30">
-                        &copy; 2018 Biz in a web. All Rights Reserved.
-                    </p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h2 class="subscribe-text">Subscribe</h2>
+                    <form action="/" method="post" class="mt-40">
+                        <div class="form-group position-relative">
+                            <input type="email" class="email-field" placeholder="Enter Email Here" name="name" value="" required="" />
+                            <button type="submit" class="btn-style">
+                                <i class="flaticon-arrow-pointing-to-right"></i>
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-lg-2 col-md-6 offset-lg-1 media-footer-mt">
+                    <h2 class="subscribe-text">Explore</h2>
+                    <div class="mt-30">
+                        <ul class="footer-nav-setting">
+                            <li class="mt-2">
+                                <a href="#">Home</a>
+                            </li>
+                            <li class="mt-2">
+                                <a href="#">Service</a>
+                            </li>
+                            <li class="mt-2">
+                                <a href="#">About</a>
+                            </li>
+                            <li class="mt-2">
+                                <a href="#">Work</a>
+                            </li>
+                            <li class="mt-2">
+                                <a href="#">Team</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 media-footer-mt">
+                    <div>
+                        <a href="#" class="link-style">
+                            <i class="flaticon-facebook-logo  ml-2"></i>
+                        </a>
+                        <a href="#" class="link-style ">
+                            <i class="flaticon-twitter-logo-silhouette ml-2"></i>
+                        </a>
+                        <a href="#" class="link-style ">
+                            <i class="flaticon-pinterest-logo ml-2"></i>
+                        </a>
+                    </div>
+                    <div class="mt-45">
+                        <p class="footer-pera-text">
+                            Created by <span class="biz-color">Bizinabox </span>,<br />
+                            exclusive for Professionals.
+                        </p>
+                        <p class="footer-font mt-30">
+                            &copy; 2018 Biz in a web. All Rights Reserved.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+
     </section>
     <!------------------- JQuery Files Section ------------------->
     <script src="assets/Bootstrap4/js/jquery.slim.min.js"></script>
